Fix packaging for MacOS (#209)
* Fix packaging for MacOS
    Moving folders named pattern*/ is apparently illegal in macOs 15
* clang-format fixed
    It broke for some reason. Got rid of an unnecessary fetch while at it
* Disable shallow clone
    Switch to master
* Fix grep exit with 0 on no files
* Bump and format Project.h
* Change how macos downloads to avoid the globbing issue

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -460,11 +460,11 @@ jobs:
         shell: bash
         run: |
           TAG=$(curl -s https://api.github.com/repos/djdiskmachine/lgpt-resources/releases/latest | grep '"tag_name"' | head -1 | cut -d'"' -f4)
+          cd resources/packaging
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/${TAG}.zip
           unzip lgpt-resources.zip
-          mv lgpt-resources-${TAG}/*/ ./resources/packaging
           rm -rf lgpt-resources*
-          ./resources/packaging/lgpt_package.sh
+          cd - && ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
         id: extract_tag
