--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,14 +9,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Fetch all branches
-        run: git fetch
+        with:
+            fetch-depth: 0
 
       - name: Check formatting
         run: |
-            git fetch origin master:master
-            CHANGED_FILES=$(git diff --name-only master --diff-filter=ACM | grep -iE '\.(cpp|h|c|hpp)$')
+            CHANGED_FILES=$(git diff --name-only origin/master...HEAD --diff-filter=ACM | grep -iE '\.(cpp|h|c|hpp)$' || true)
 
             if [ -z "$CHANGED_FILES" ]; then
                 echo "No C/C++ files changed."
@@ -28,7 +26,7 @@ jobs:
             # Run clang-format on the changed lines of each staged file
             for FILE in $CHANGED_FILES; do
                 # Get the changed lines in the file
-                CHANGED_LINES=$(git diff -U0 master -- $FILE | grep -E '^@@' | awk '{print $3}' | cut -d',' -f1)
+                CHANGED_LINES=$(git diff -U0 origin/master -- $FILE | grep -E '^@@' | awk '{print $3}' | cut -d',' -f1)
 
                 # Format each changed line in the file
                 for LINE in $CHANGED_LINES; do
@@ -450,11 +448,11 @@ jobs:
         shell: bash
         run: |
           TAG=$(curl -s https://api.github.com/repos/djdiskmachine/lgpt-resources/releases/latest | grep '"tag_name"' | head -1 | cut -d'"' -f4)
+          cd resources/packaging
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/${TAG}.zip
           unzip lgpt-resources.zip
-          mv lgpt-resources-${TAG}/*/ ./resources/packaging
           rm -rf lgpt-resources*
-          ./resources/packaging/lgpt_package.sh
+          cd - && ./resources/packaging/lgpt_package.sh
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
