rg25xx-plus midi build

--- a/projects/Makefile.RG35XXPLUS
+++ b/projects/Makefile.RG35XXPLUS
@@ -10,8 +10,8 @@ DEFINES := \
 	-D_NDEBUG \
 	-D_NO_JACK_ \
 	-DSDL2 \
-	-DSDLAUDIO \
-	-DDUMMYMIDI \
+        -DSDLAUDIO \
+	-DRTMIDI \
 	-DFFMPEG_ENABLED
 
 DEVKIT := /opt/rg35xx-plus-aarch64-SDL2-SDK-0.1.0/
